[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/songs.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/GUI/buttongroup_songs.tres" type="ButtonGroup" id=2]
[ext_resource path="res://scenes/GUI/songs_list.gd" type="Script" id=3]

[node name="songs_list" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -72.0
margin_right = 138.5
margin_bottom = 72.0
custom_constants/separation = 20

[node name="song1" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 277.0
margin_bottom = 40.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/song1"]
margin_left = 23.0
margin_right = 99.0
margin_bottom = 40.0
group = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/song1"]
margin_left = 103.0
margin_right = 254.0
margin_bottom = 40.0

[node name="song_name" type="Label" parent="VBoxContainer/song1/VBoxContainer"]
margin_right = 151.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Theme From Spiderman"
align = 1
valign = 1

[node name="song_artist" type="Label" parent="VBoxContainer/song1/VBoxContainer"]
margin_top = 22.0
margin_right = 151.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "The Ramones"
align = 1
valign = 1

[node name="song2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 277.0
margin_bottom = 100.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/song2"]
margin_right = 76.0
margin_bottom = 40.0
group = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/song2"]
margin_left = 80.0
margin_right = 277.0
margin_bottom = 40.0

[node name="song_name" type="Label" parent="VBoxContainer/song2/VBoxContainer"]
margin_right = 197.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Through The Fire And Flames"
align = 1
valign = 1

[node name="song_artist" type="Label" parent="VBoxContainer/song2/VBoxContainer"]
margin_top = 22.0
margin_right = 197.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Dragonforce"
align = 1
valign = 1

[node name="start" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 277.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 1 )
text = "Empezar"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
